--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
   ],
   "main": "./lib",
   "dependencies": {
+    "debug": "2.x.x",
     "uid2": "0.0.x",
-    "utils-merge": "1.x.x",
-    "debug": "2.x.x"
+    "url-format": "^1.0.0",
+    "utils-merge": "1.x.x"
   },
   "devDependencies": {
     "make-node": "0.3.x",
